<resources>
    <string name="app_name">ILeave</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="type_of_leave">Type of Leave</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="reason">Reason</string>
    <string name="submit">Submit</string>
    <string name="time">Time</string>

    <string-array name="parent_items">
        <item>Pending Leaves</item>
        <item>Approved Leaves</item>
        <item>Cancelled Leaves</item>
        <item>Rejected Leaves</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leaves">Leaves</string>
</resources>
