<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/spinner3"
        android:layout_below="@+id/spinner3"
        android:layout_marginTop="13dp"
        android:text="@string/type_of_leave" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/name" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/spinner4"
        android:layout_below="@+id/spinner4"
        android:layout_marginTop="18dp"
        android:text="@string/date" />

    <EditText
        android:id="@+id/file_start_date"
        android:drawableRight="@drawable/ic_date_range_black_24px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:ems="10"
        android:hint="@string/from"
        android:inputType="date"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/file_end_date"
        android:drawableRight="@drawable/ic_date_range_black_24px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/file_start_date"
        android:layout_toEndOf="@+id/file_start_date"
        android:ems="10"
        android:hint="@string/to"
        android:inputType="date"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/file_start_date"
        android:layout_below="@+id/file_start_date"
        android:layout_marginTop="18dp"
        android:text="@string/time" />

    <EditText
        android:id="@+id/file_start_time"
        android:drawableRight="@drawable/ic_schedule_black_24px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView8"
        android:layout_below="@+id/textView8"
        android:ems="10"
        android:hint="@string/from"
        android:inputType="time"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/file_end_time"
        android:drawableRight="@drawable/ic_schedule_black_24px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/file_start_time"
        android:layout_toEndOf="@+id/file_start_time"
        android:ems="10"
        android:hint="@string/to"
        android:inputType="time"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/file_start_time"
        android:layout_below="@+id/file_start_time"
        android:layout_marginTop="20dp"
        android:text="@string/reason" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_submit_leave"
        android:layout_alignEnd="@+id/file_end_time"
        android:layout_alignStart="@+id/textView9"
        android:layout_below="@+id/textView9"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btn_submit_leave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText7"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editText7"
        android:layout_marginBottom="40dp"
        android:background="@color/colorPrimary"
        android:text="@string/submit"
        android:textColor="@color/colorText" />

</RelativeLayout>