<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="27dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/txt_leave_details_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginStart="16dp"
        android:text="TextView"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_leave_details_name"
        android:layout_marginTop="19dp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/txt_leave_details_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_leave_details_name"
        android:layout_below="@+id/textView4"
        android:text="TextView"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_leave_details_date"
        android:layout_marginTop="21dp"
        android:text="@string/time" />

    <TextView
        android:id="@+id/txt_leave_details_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_leave_details_date"
        android:layout_below="@+id/textView11"
        android:text="TextView"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_leave_details_time"
        android:layout_marginTop="40dp"
        android:text="@string/reason" />

    <TextView
        android:id="@+id/txt_leave_details_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_leave_details_time"
        android:layout_below="@+id/textView14"
        android:text="TextView" />

    <Button
        android:id="@+id/btn_approve"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="37dp"
        android:background="@color/colorPrimary"
        android:text="Approve"
        android:textColor="@color/colorText" />

    <Button
        android:id="@+id/btn_reject"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_approve"
        android:layout_alignBottom="@+id/btn_approve"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/btn_approve"
        android:background="@color/colorPrimary"
        android:text="Reject"
        android:textColor="@color/colorText" />


</RelativeLayout>